examples/errors/params_not_enough/main.lc

function funA(name: string) {
    print(name);
}

function main() {
    funA();
}
